--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3.7'
 
 services:
-  # theia
-  theia-full:
-    image: 'theiaide/theia-full:1.14.0'
+  theia:
+    image: theiaide/theia-full:1.14.0
+    container_name: theia
     networks:
       - red
     restart: always
     ports:
       - "3030:3000"
     volumes:
-      - '/var/run/docker.sock:/tmp/docker.sock:ro'
-      - '$(pwd):/home/project:cached'
+      - /root/project:/home/project:cached
+      - /var/run/docker.sock:/tmp/docker.sock:ro
 
 networks:
-    red:
+  red:
     driver: bridge
